fixed all the alignment issues changed out sticky button

--- a/css/style.css
+++ b/css/style.css
@@ -551,10 +551,14 @@ textarea.form-control {
  height: 100%;
 }
 
+.imgboxtop {
+ display: grid;
+ width: 100%;
+}
+
 .center-fit {
- max-width: 100%;
- max-height: 100vh;
- m
+ max-width: 100vw;
+ max-height: auto;
 }
 
 .site-footer .site-footer-logo {
@@ -885,11 +889,9 @@ textarea.form-control {
 }
 
 .stickybutton{
-  position: sticky;
-  position: -webkit-sticky;
-  float:right;
+  position:absolute;
+  right:0;
   top: 0;
-  float: right;
   border-radius: 3em;
   margin-top: 1em;
   margin-right: 1em;
@@ -914,12 +916,16 @@ textarea.form-control {
 }
 
 .topSocial{
-  color:rgba(94,94,94,1);
+  color:#5e5e5e;
   align:center;
   font-size: 1em;
   text-decoration: none;
   text-shadow:none;
   border:none;
+}
+
+.topSocial:hover{
+  color:#fb7d33;
 }
 
 #site-loader {
